--- a/src/presentation/views/login/LoginForm.form
+++ b/src/presentation/views/login/LoginForm.form
@@ -10,15 +10,15 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="c7224" class="javax.swing.JLabel" binding="dniLabel">
+      <component id="c7224" class="javax.swing.JLabel" binding="usernameLbl">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Dni"/>
+          <text value="Username"/>
         </properties>
       </component>
-      <component id="e5b3e" class="javax.swing.JLabel" binding="passwordLabel">
+      <component id="e5b3e" class="javax.swing.JLabel" binding="passwordLbl">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -48,7 +48,7 @@
           <grid row="6" column="0" row-span="1" col-span="5" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="c450c" class="javax.swing.JButton" binding="loginButton">
+      <component id="c450c" class="javax.swing.JButton" binding="loginBtn">
         <constraints>
           <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -57,7 +57,7 @@
           <text value="Login"/>
         </properties>
       </component>
-      <component id="59314" class="javax.swing.JTextField" binding="dniInput">
+      <component id="59314" class="javax.swing.JTextField" binding="usernameInput">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
